Fix overlaping text

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -411,7 +411,7 @@ textarea {
 	white-space:nowrap;
 	width:180px;
 	left:10px; 
-	height:15px;
+	height:17px;
 	width:180px;
 	overflow:hidden;
 	white-space:nowrap;
